--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "antd": "^4.1.4",
+    "axios": "^0.19.2",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
@@ -143,5 +144,6 @@
   "devDependencies": {
     "less-loader": "^5.0.0",
     "react-router-dom": "^5.1.2"
-  }
+  },
+  "proxy": "https://op.mixuan.com/"
 }
