--- a/package.json
+++ b/package.json
@@ -146,5 +146,5 @@
     "less-loader": "^5.0.0",
     "react-router-dom": "^5.1.2"
   },
-  "proxy": "https://op.mixuan.com/"
+  "proxy": "http://192.168.1.115:8070"
 }
